pages/resume/header.module.css
.header {
  display: grid;
  grid-template-columns: repeat(1, minmax(0, 1fr));
  padding-bottom: 1.5rem;
  margin-bottom: 1rem;
  border-bottom: 4px solid #fb923c;
  row-gap: 1rem;
  column-gap: 3rem;
}

@media (min-width: 768px) {
  .header {
    grid-template-columns: 1fr auto 1fr;
  }
}

.leftSection {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  text-align: center;
}

@media (min-width: 768px) {
  .leftSection {
    text-align: left;
  }
}

.nameWrapper {
  position: relative;
}

.highlightBar {
  border-left: 30px solid #fb923c;
  height: 100%;
  position: absolute;
  margin-left: -3rem;
  display: none;
}

@media (min-width: 768px) {
  .highlightBar {
    display: block;
  }
}

.name {
  font-size: 2.25rem;
  line-height: 2.5rem;
  font-weight: 600;
  margin-bottom: 0.5rem;
}

.title {
  font-size: 1.5rem;
  line-height: 2rem;
  font-weight: 400;
}

.description {
  font-weight: 300;
}

.photoContainer {
  display: flex;
  justify-content: center;
  align-items: center;
}

.photoBorder {
  border: 4px solid #4b5563;
  border-radius: 9999px;
  display: flex;
  align-items: center;
}

.photo {
  border-radius: 9999px;
}

.contactNav {
  font-weight: 300;
  justify-self: center;
}

@media (min-width: 768px) {
  .contactNav {
    text-align: right;
    justify-self: end;
  }
}

.contactList {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  gap: 0.5rem;
}

.contactItem {
  display: flex;
  gap: 1rem;
  align-items: center;
}

@media (min-width: 768px) {
  .contactItem {
    justify-content: flex-end;
  }
}

.contactIcon {
  order: 0;
}

@media (min-width: 768px) {
  .contactIcon {
    order: 2;
  }
}

.contactLink {
  text-decoration: underline;
}

.contactLink:hover {
  text-decoration: none;
}

